Switched to mustache built-in template.

--- a/version.properties
+++ b/version.properties
@@ -2,6 +2,6 @@
 version.prerelease=beta
 version.project=Example
 version.minor=1
-version.buildmeta=
+version.buildmeta=001
 version.patch=49
 version.major=3
