--- a/build.gradle
+++ b/build.gradle
@@ -11,20 +11,23 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'application'
 
+// ./gradlew 
+// ./gradlew runJava
+
 defaultTasks 'run'
 
-def processorJar = files("lib/semver-0.9.7.jar")
+def processorJar = "net.thauvin.erik:semver:0.9.7"
 
 mainClassName = 'com.example.Main'
 
 repositories {
+    mavenLocal()
     jcenter()
 }
 
 dependencies {
     kapt processorJar
     compileOnly processorJar
-    //compileOnly 'com.github.spullara.mustache.java:compiler:0.9.4'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
