--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.2'
+    ext.kotlin_version = '1.1.51'
     repositories {
         mavenCentral()
     }
@@ -16,7 +16,10 @@ apply plugin: 'application'
 
 defaultTasks 'run'
 
-def processorJar = "net.thauvin.erik:semver:1.0.0"
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+def processorJar = "net.thauvin.erik:semver:1.0.1"
 
 mainClassName = 'com.example.Main'
 
