--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ defaults: &defaults
 version: 2.0
 
 jobs:
-  build:
+  build_gradle:
     <<: *defaults
 
     steps:
@@ -59,5 +59,5 @@ workflows:
   version: 2
   build_gradle_and_kobalt:
     jobs:
-      - build
+      - build_gradle
       - build_kobalt
